--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="dist/styles/main.css">
     </head>
     <body>
-       <h5>CATEGORY</h5> 
+       <h5 class="title">CATEGORY</h5> 
+       <h2 class="bigTitle">We Offer Best Services</h2>
+       <section class="Containeur2"> 
+            <div></div>
+       </section>
     </body>
 </html>
