--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
         <link rel="stylesheet" href="dist/styles/main.css">
     </head>
     <body>
-       <h5 class="title">CATEGORY</h5> 
+        <header id="header">
+            <div class="logo"><img src="dist/images/logo.png" alt="logo"></div>
+            <div class="containeur">
+                <ul class="liste">
+                    <li><a href="#">Destination</a></li>
+                    <li><a href="#">Destination</a></li>
+                    <li><a href="#">Destination</a></li>
+                    <li><a href="#">Destination</a></li>
+                    <li><a href="#">Destination</a></li>
+                    <li><a href="#">Destination</a></li>
+                    <li><a href="#">Destination</a></li>
+                </ul>
+            </div>
+        </header>
+    </body>
+</html>
+
+
+
+
+<h5 class="title">CATEGORY</h5> 
        <h2 class="bigTitle">We Offer Best Services</h2>
        <section class="Containeur2"> 
             <div></div>
        </section>
-    </body>
-</html>
