--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
             <div class="logo"><img src="dist/images/logo.png" alt="logo"></div>
             <div class="containeur">
                 <ul class="liste">
-                    <li><a href="#">Destination</a></li>
-                    <li><a href="#">Destination</a></li>
-                    <li><a href="#">Destination</a></li>
-                    <li><a href="#">Destination</a></li>
-                    <li><a href="#">Destination</a></li>
-                    <li><a href="#">Destination</a></li>
-                    <li><a href="#">Destination</a></li>
+                    <li ><a href="#">Destination</a></li>
+                    <li class="Main"><a href="#">Destination</a></li>
+                    <li class="Main"><a href="#">Destination</a></li>
+                    <li class="Main"><a href="#">Destination</a></li>
+                    <li class="Main"><a href="#">Destination</a></li>
+                    <li class="Main"><a href="#">Destination</a></li>
+                    <li class="Main"><a href="#">Destination</a></li>
                 </ul>
             </div>
         </header>
-<!--sqdcs-->
     </body>
 </html>
 
